Fixed max-height truncation - increased max-height to 6000px

--- a/css/callum_anderson.css
+++ b/css/callum_anderson.css
@@ -63,10 +63,10 @@ img {
   margin: 5% auto;
 }
 .blog-panel {
-  max-height: 2000px;
+  max-height: 6000px;
   overflow: hidden;
-  transition: max-height 0.4s ease-out;
-  -webkit-transition: max-height 0.4s ease-out;
+  transition: max-height 0.5s ease-out;
+  -webkit-transition: max-height 0.5s ease-out;
 }
 .blog-post {
   cursor: pointer;
